# Pi-ChessBox

./: .gitignore  CMakeLists.txt  README.md  cbcontroller_backup  cbcontroller_new  controller.cpp  setup.sh  start_chessbox.sh
common/: BoardRules.h  PGNUtils.cpp  PGNUtils.h  UCIClient.cpp  UCIClient.h  chessaction.hpp  chessmove.hpp  defs.h  generalexception.cpp  generalexception.h  gettimeofday.cpp  gettimeofday.h  json.hpp  msdefs.h  socketinstance.cpp  socketinstance.h  ssobjects.h  stopwatch.cpp  stopwatch.h  thc.cpp  thc.h  ucitest.hpp
engine/: stockfish8
sdl_libs/: libSDL2_image-2.0.so.0.2.3  libSDL2_ttf-2.0.so.0.14.1
src/: Board.cpp  Board.h  Button.cpp  Button.h  ClockPopup.cpp  ClockPopup.h  Component.cpp  Component.h  Connector.cpp  Connector.h  ControllerGUI.h  ControllerGUIProto.cpp  ControllerGUIProto.h  ControllerGUIjson.cpp  DepthPopup.cpp  DepthPopup.h  Dialog.cpp  Dialog.h  FilePickerPopup.cpp  FilePickerPopup.h  FontManager.cpp  FontManager.h  ImageButton.h  Label.cpp  Label.h  LevelPopup.cpp  LevelPopup.h  MarkPopup.cpp  MarkPopup.h  MenuPopup.h  MovesPanel.cpp  MovesPanel.h  PGNLoader.cpp  PGNLoader.h  Prefs.cpp  Prefs.h  Sprite.cpp  Sprite.h  TextField.cpp  TextField.h  (+16 more)
tiny-process-library/: CMakeLists.txt  README.md  process.hpp  process_unix.cpp  process_win.cpp
